Remove inset at the bottom of the popup menus

The popup menus have a bottom inset because of the style of the table
view used. This CL prevents its by adding a dummy footer and settings
the footer height to 0.
This only happened on iOS 10.

Bug: 867782
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ia05e0a94f136e1cfaffb9e67bbc1bd09c606a5b2
Reviewed-on: https://chromium-review.googlesource.com/1166905
Reviewed-by: Stepan Khapugin <stkhapugin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581510}