ios/chrome/browser/ui/popup_menu/popup_menu_table_view_controller.mm
@@ -5,6 +5,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #import "ios/chrome/browser/ui/popup_menu/popup_menu_table_view_controller.h"
 
+#include "base/ios/ios_util.h"
 #include "base/metrics/user_metrics.h"
 #include "base/metrics/user_metrics_action.h"
 #import "ios/chrome/browser/ui/commands/application_commands.h"
@@ -138,6 +139,15 @@ const CGFloat kScrollIndicatorVerticalInsets = 11;
   self.tableView.tableHeaderView = [[UIView alloc]
       initWithFrame:CGRectMake(0.0f, 0.0f, self.tableView.bounds.size.width,
                                0.01f)];
+
+  if (!base::ios::IsRunningOnIOS11OrLater()) {
+    // On iOS 10, a footer with a height of 0 is also needed to prevent inset at
+    // the bottom.
+    self.tableView.tableFooterView = [[UIView alloc]
+        initWithFrame:CGRectMake(0.0f, 0.0f, self.tableView.bounds.size.width,
+                                 0.01f)];
+    self.tableView.sectionFooterHeight = 0.0;
+  }
 
   self.view.layer.cornerRadius = kPopupMenuCornerRadius;
   self.view.layer.masksToBounds = YES;
